# irec-flight-software

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
src/: CMakeLists.txt  main.cpp
src/SCServo/: CMakeLists.txt  SCS.cpp  SCSCL.cpp  SCSerial.cpp  SCSerial.h  SCServo.h
src/sensors/: adxl375.cpp  adxl375.h  bm1422.cpp  bm1422.h  bmi323.cpp  bmi323.h  ms5607.cpp  ms5607.h
